--- a/index.html
+++ b/index.html
@@ -108,6 +108,12 @@
             <button id="order">Pesan Sekarang</button>
         </form>
      </section>
+
+         <!-- Footer -->
+    <footer>
+        <hr>
+        <p><small>&copy; 2025 Pizza Mantab. All Rights Reserved</small></p>
+    </footer>
 </body>
 </html>
 <section>
