--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/6978/6978255.png" type="image/x-icon" />
+  <link rel="stylesheet" href="style.css">
   <title>Pizza Online</title>
 </head>
 <body>
