--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Pizza Online</title>
 </head>
 <body>
+<div class="container">
   <!-- Header -->
   <header>
     <h1>Form Pemesanan Pizza</h1>
@@ -109,12 +110,21 @@
             <button id="order">Pesan Sekarang</button>
         </form>
      </section>
-
-         <!-- Footer -->
+        <!-- Section: Kontak -->
+    <section id="contact">
+        <h2>Kontak Kami</h2>
+        <p>📍 Jl. Raya mana aja</p>
+        <p>📞 <b>081212121321</b></p>
+        <p>📧 <a href="mailto:rizkisuryapratama2020@gmial.co">rizkisuryapratama2020@gmial.com</a></p>
+    </section>
+ 
+    <!-- Footer -->
     <footer>
         <hr>
         <p><small>&copy; 2025 Pizza Mantab. All Rights Reserved</small></p>
     </footer>
+
+</div>
 </body>
 </html>
 <section>
